[package]
name = "ronty"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1"
itertools = "0.10"
minifb = "0.19"
num-integer = "0.1"
tempfile = "3.2.0"
v4l = "0.12"

[dependencies.image]
default-features = false
features = ["jpeg_rayon"]
version = "0.23"

[dependencies.dlib-face-recognition]
git = "https://github.com/FauxFaux/dlib-face-recognition"

[profile.release]
#lto = true
debug = 1
panic = "abort"
