[package]
name = "ronty"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
dlib-face-recognition = "0.3"
itertools = "0.10"
minifb = "0.28"
num-integer = "0.1"
tempfile = "3.2.0"
v4l = "0.14"

[dependencies.image]
default-features = false
features = ["jpeg_rayon"]
version = "0.24"

[profile.release]
#lto = true
debug = 1
panic = "abort"
